# poisson_topicmodels

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  00_START_HERE.md  ARTICLE_TDS_SPF.md  AUDIT_ARTIFACTS_INDEX.md  AUDIT_EXECUTIVE_SUMMARY.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_COMPLETE.md  Dockerfile  FINAL_VERIFICATION.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  JAX_METAL_TROUBLESHOOTING.md  LICENSE  METRICS_DASHBOARD.md  PACKAGE_REBRANDING_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_VERIFICATION.md  PHASE3_CHANGES_CHECKLIST.md  PHASE3_COMPLETE.md  PHASE3_PROGRESS.md  PHASE3_QUICKREF.md  PHASE3_ROADMAP.md  PHASE4_PROGRESS.md  PHASES_1_2_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  PUBLICATION_AUDIT.md  PUBLICATION_READY.md  PUBLICATION_READY_CERTIFICATE.md  QUICK_START_FIXES.md  QUICK_SUBMIT.md  (+15 more)
.github/workflows/: release.yaml  tests.yml
.ipynb_checkpoints/: run_topicmodels-checkpoint.py
data/figures/: CSPF2_graphical_model.tex  render_CSPF2_graphical_model.py  render_CSPF_DGM.py
docs/: conf.py  index.rst  models.rst  modules.rst
docs/_static/: custom.css
docs/about/: index.rst
docs/api/: index.rst
docs/contributing_guide/: index.rst
docs/examples_guide/: index.rst
docs/fundamentals/: core_concepts.rst  covariate_models.rst  embedded_models.rst  ideal_points.rst  index.rst  poisson_factorization.rst  seeded_models.rst
docs/getting_started/: index.rst
docs/how_to_guides/: index.rst
docs/installation/: index.rst
docs/intro/: contributing.rst  examples.rst  installation.rst  user_guide.rst
docs/introduction/: examples.rst  index.rst  installation.rst  pf.rst  what_is_pypf.rst
docs/release_notes/: index.rst
docs/testing/: index.rst
docs/tutorials/: index.rst  tutorial_gpu.rst  tutorial_hyperparameters.rst  tutorial_training.rst  tutorial_validation.rst
examples/: 01_getting_started.py  02_spf_keywords.py  03_cpf_covariates.py  04_advanced_cspf.py  05_simple_stbs.py  README.md  amazon_results.md  measure_runtime.py  run_topicmodels.ipynb  run_topicmodels.py  test_amazon_grouped.py  test_cspf_new.py  test_cspf_new2.py  test_cspf_new2_analysis.ipynb
poisson_topicmodels/: __init__.py
simulation/: cspf_simulation.py
tests/: SAMPLE_TESTS.py  __init__.py  conftest.py  test_additional_model_coverage.py  test_coverage_boost.py  test_imports.py  test_input_validation.py  test_integration.py  test_models_comprehensive.py  test_numpyro_model_and_utils.py  test_pf.py  test_spf.py  test_training_and_outputs.py
(+71 files in other folders)
