[project]
name = "topicmodels-package"
version = "0.1.0"
description = "Package for different topic models."
authors = [
    {name = "Bernd Prostmaier",email = "b.prostmaier@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11, <=3.13"
dependencies = [
    "jax (>=0.8.0,<0.9.0)",
    "numpyro (>=0.19.0,<0.20.0)",
    "optax (>=0.2.6,<0.3.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "flax (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
