[project]
name = "poisson-topicmodels"
version = "0.1.0"
description = "Poisson topic modeling with Bayesian inference using JAX and NumPyro"
authors = [
    {name = "Bernd Prostmaier", email = "b.prostmaier@icloud.com"},
    {name = "Bettina Grün"},
    {name = "Paul Hofmarcher"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
keywords = ["topic-modeling", "bayesian-inference", "jax", "numpyro", "probabilistic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "jax==0.8.0",
    "jaxlib==0.8.0",
    "numpyro==0.19.0",
    "optax==0.2.6",
    "numpy>=2.2.0,<3.0.0",
    "scipy>=1.15.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "scikit-learn>=1.6.0,<2.0.0",
    "matplotlib>=3.10.0,<4.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "flax>=0.12.0",
    "gensim>=4.3.0,<5.0.0",
    "wordcloud>=1.9.0,<2.0.0",
    "seaborn>=0.13.2,<0.14.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1,<10.0.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "pylint>=2.17",
    "flake8>=6.0",
    "pre-commit>=4.5.0,<5.0.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "myst-parser>=1.0",
    "sphinx-autodoc-typehints>=1.22",
]

[project.urls]
repository = "https://github.com/BPro2410/topicmodels_package"
documentation = "https://topicmodels.readthedocs.io"
issues = "https://github.com/BPro2410/topicmodels_package/issues"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
